[package]
name = "cargo-furnace"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Sycrosity/cargo-furnace"
description = "A cargo subcommand for bundling OS-specific applications"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
