[package]
name = "cargo-furnace"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Sycrosity/cargo-furnace"
authors = ["Sycrosity"]
description = "A cargo subcommand for bundling OS-specific applications"
categories = [ "command-line-utilities", "development-tools::cargo-plugins" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.4", features = ["derive"] }
toml = "0.7.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
tauri-utils = { version = "1.4.0", features = [ "resources" ] }
tauri-bundler = { version = "1.3.0" }
anyhow = "1.0.71"